--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <footer class="bg-stone-800 text-white mt-16">
         <div class="container mx-auto py-6 px-4 text-center text-stone-400">
-            <p>&copy; 2025-2026 סקירת שוק הפרילנסרים ב-AI. הנתונים מבוססים על ניתוח סינתטי של מקורות מידע גלויים.</p>
+            <p>&copy; 2025-2026 סקירת שוק הפרילנסרים ב-AI. <a href="https://mldk.tech">MLDK.tech</a> הנתונים מבוססים על ניתוח סינתטי של מקורות מידע גלויים.</p>
         </div>
     </footer>
 
